# jpeg

./: README.md  pyproject.toml
examples/: convert.py
src/jpeg/: __init__.py
src/jpeg.egg-info/: PKG-INFO  SOURCES.txt
src/jpegtran.egg-info/: PKG-INFO  SOURCES.txt
