[project]
name = "jpeg"
version = "0.0.2"
authors = [
  { name="Saw Jing Wen", email="shotnothing@protonmail.ch" },
]
description = "A Python wrapper for jpegtran."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/shotnothing/jpeg"
Issues = "https://github.com/shotnothing/jpeg/issues"